MarcoKitTests/TestData/error/object6.marco
--before
{@}

--after
1: Unexpected identifier character '}'

{ğŸ’¥